fix: card align

--- a/src/App.css
+++ b/src/App.css
@@ -117,8 +117,8 @@ body{
 
 .card-image{
   width: 50px;
-  height: auto;
-  height: auto;
+  height: 50px;
+ 
 }
 
 .custom-table{
